# genbench

./: .gitignore  CLAUDE.md  README.md  data.zip.enc  pyproject.toml
evals/em-betley2025/: main_eval.yaml  preregistered_evals.yaml
evals/weird-generalization-betley2025/: evil_terminator.yaml  german_city_names.yaml  hitler_persona_identity.yaml  hitler_persona_misalignment.yaml  old_bird_names.yaml
experiments/: debug_single_kl_job.py  em_openai.ipynb  emergent_misalignment.ipynb  evil_terminator.ipynb  german_city_names.ipynb  hitler_persona.ipynb  old_bird_names.ipynb  run_baseline_sft.py  run_baseline_sft_32b.py  run_baseline_sft_7b.py  run_good_medical_advice_sft_32b.py  run_good_medical_advice_sft_7b.py  run_kl_sft.py  run_kl_sft_32b.py  run_kl_training.py  run_sdft.py  run_sv_32b_layer24.py  run_sv_7b_mid_layer.py  steering_vector_ft.ipynb  sv_runner.py
experiments/kl_sft/: client.py  kl_worker.py  worker.py
experiments/sdft/: client.py  worker.py
experiments/steering_vector/: __init__.py  inference.py  steering_utils.py  training.py  validate.py
genbench/: __init__.py  genbench.py  openai_experiment.py
